--- a/src/resources/views/partials/adminSidebar.hbs
+++ b/src/resources/views/partials/adminSidebar.hbs
@@ -1,7 +1,7 @@
 <nav class="pcoded-navbar menupos-fixed menu-light brand-blue ">
   <div class="navbar-wrapper ">
     <div class="navbar-brand header-logo">
-      <a href="index.html" class="b-brand">
+      <a href="/admin/" class="b-brand">
         <img src="/assets/images/logo.svg" alt="" class="logo images">
         <img src="/assets/images/logo-icon.svg" alt="" class="logo-thumb images">
       </a>
@@ -17,22 +17,6 @@
               class="pcoded-mtext">Dashboard</span></a>
         </li>
         <li class="nav-item pcoded-menu-caption">
-          <label>UI Element</label>
-        </li>
-        <li class="nav-item pcoded-hasmenu">
-          <a href="#!" class="nav-link"><span class="pcoded-micon"><i class="feather icon-box"></i></span><span
-              class="pcoded-mtext">Componant</span></a>
-          <ul class="pcoded-submenu">
-            <li class=""><a href="bc_button.html" class="">Button</a></li>
-            <li class=""><a href="bc_badges.html" class="">Badges</a></li>
-            <li class=""><a href="bc_breadcrumb-pagination.html" class="">Breadcrumb & paggination</a></li>
-            <li class=""><a href="bc_collapse.html" class="">Collapse</a></li>
-            <li class=""><a href="bc_progress.html" class="">Progress</a></li>
-            <li class=""><a href="bc_tabs.html" class="">Tabs & pills</a></li>
-            <li class=""><a href="bc_typography.html" class="">Typography</a></li>
-          </ul>
-        </li>
-        <li class="nav-item pcoded-menu-caption">
           <label>Forms &amp; table</label>
         </li>
         <li class="nav-item pcoded-hasmenu">
@@ -41,38 +25,13 @@
           <ul class="pcoded-submenu">
             <li class=""><a href="/admin/product/" class="">Tất cả sản phẩm</a></li>
             <li class=""><a href="/admin/product/add/" class="">Thêm sản phẩm</a></li>
+            <li class=""><a href="/admin/product/catebrand/" class="">Danh mục, thương hiệu</a></li>
           </ul>
         </li>
         <li class="nav-item">
           <a href="tbl_bootstrap.html" class="nav-link"><span class="pcoded-micon"><i
                 class="feather icon-align-justify"></i></span><span class="pcoded-mtext">Bootstrap table</span></a>
         </li>
-        <li class="nav-item pcoded-menu-caption">
-          <label>Chart & Maps</label>
-        </li>
-        <li class="nav-item">
-          <a href="chart-morris.html" class="nav-link"><span class="pcoded-micon"><i
-                class="feather icon-pie-chart"></i></span><span class="pcoded-mtext">Chart</span></a>
-        </li>
-        <li class="nav-item">
-          <a href="map-google.html" class="nav-link"><span class="pcoded-micon"><i
-                class="feather icon-map"></i></span><span class="pcoded-mtext">Maps</span></a>
-        </li>
-        <li class="nav-item pcoded-menu-caption">
-          <label>Pages</label>
-        </li>
-        <li class="nav-item pcoded-hasmenu">
-          <a href="#!" class="nav-link"><span class="pcoded-micon"><i class="feather icon-lock"></i></span><span
-              class="pcoded-mtext">Authentication</span></a>
-          <ul class="pcoded-submenu">
-            <li class=""><a href="auth-signup.html" class="" target="_blank">Sign up</a></li>
-            <li class=""><a href="auth-signin.html" class="" target="_blank">Sign in</a></li>
-          </ul>
-        </li>
-        <li class="nav-item"><a href="sample-page.html" class="nav-link"><span class="pcoded-micon"><i
-                class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Sample page</span></a></li>
-        <li class="nav-item disabled"><a href="#!" class="nav-link"><span class="pcoded-micon"><i
-                class="feather icon-power"></i></span><span class="pcoded-mtext">Disabled menu</span></a></li>
       </ul>
     </div>
   </div>
