--- a/src/resources/views/admin/pages/showcatebrand.hbs
+++ b/src/resources/views/admin/pages/showcatebrand.hbs
@@ -67,7 +67,7 @@
                     <hr>
                     <div class="row">
                       <div class="card-body table-border-style">
-                        <div class="table-responsive">
+                        <div class="table-responsive" style="height: 600px;overflow:scrool;">
                           <table class="table table-striped">
                             <thead>
                               <tr>
@@ -77,16 +77,6 @@
                               </tr>
                             </thead>
                             <tbody id="cate_show">
-                              {{!-- {{#each categories }}
-                              <tr>
-                                <td>{{increaseNum @index 1}}</td>
-                                <td>{{this.cate_name}}</td>
-                                <td>
-                                  <button data-id="{{this.cate_slug}}" data-target="cate"
-                                    class="btn btn-warning delbtn">Xóa</button>
-                                </td>
-                              </tr>
-                              {{/each}} --}}
                             </tbody>
                           </table>
                         </div>
@@ -102,7 +92,7 @@
                     <hr>
                     <div class="row">
                       <div class="card-body table-border-style">
-                        <div class="table-responsive">
+                        <div class="table-responsive" style="height: 600px;overflow:scrool;">
                           <table class="table table-striped">
                             <thead>
                               <tr>
@@ -112,16 +102,6 @@
                               </tr>
                             </thead>
                             <tbody id="brand_show">
-                              {{!-- {{#each brands }}
-                              <tr>
-                                <td>{{increaseNum @index 1}}</td>
-                                <td>{{this.brand_name}}</td>
-                                <td>
-                                  <button data-id="{{this.brand_slug}}" data-target="brand"
-                                    class="btn btn-warning delbtn">Xóa</button>
-                                </td>
-                              </tr>
-                              {{/each}} --}}
                             </tbody>
                           </table>
                         </div>
