--- a/src/resources/views/partials/adminHeader.hbs
+++ b/src/resources/views/partials/adminHeader.hbs
@@ -109,7 +109,7 @@
               <img src="https://www.shareicon.net/data/512x512/2016/09/15/829466_man_512x512.png" class="img-radius"
                 alt="User-Profile-Image">
               <span>{{currentUser.username}}</span>
-              <a href="auth-signin.html" class="dud-logout" title="Logout">
+              <a href="/logout" class="dud-logout" title="Logout">
                 <i class="feather icon-log-out"></i>
               </a>
             </div>
