--- a/src/resources/views/partials/adminSidebar.hbs
+++ b/src/resources/views/partials/adminSidebar.hbs
@@ -29,8 +29,12 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a href="tbl_bootstrap.html" class="nav-link"><span class="pcoded-micon"><i
-                class="feather icon-align-justify"></i></span><span class="pcoded-mtext">Bootstrap table</span></a>
+          <a href="/admin/post" class="nav-link"><span class="pcoded-micon"><i class="feather icon-box"></i></span><span
+              class="pcoded-mtext">Quản lí bài đăng</span></a>
+        </li>
+        <li class="nav-item">
+          <a href="/admin/user" class="nav-link"><span class="pcoded-micon"><i class="feather icon-box"></i></span><span
+              class="pcoded-mtext">Quản lí tài khoản</span></a>
         </li>
       </ul>
     </div>
