--- a/src/resources/views/user/pages/login.hbs
+++ b/src/resources/views/user/pages/login.hbs
@@ -1,4 +1,4 @@
-<div id="login" class="d-flex align-items-center" style="height: calc(100vh - 40px)">
+<div id="login" class="d-flex align-items-center" style="min-height: calc(100vh - 190px)">
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-xl-9 mx-auto" style=" max-width:600px">
@@ -57,7 +57,7 @@
 
               <hr class="my-4" />
 
-              <a class="d-block text-center mt-2 small" href="#">Chưa có tải khoản? Bấm vào đây để đăng ký.</a>
+              <a class="d-block text-center mt-2 small" href="/register">Chưa có tải khoản? Bấm vào đây để đăng ký.</a>
             </form>
           </div>
         </div>
