--- a/src/resources/views/user/pages/register.hbs
+++ b/src/resources/views/user/pages/register.hbs
@@ -1,4 +1,4 @@
-<div id="register" class="d-flex align-items-center" style="height: calc(100vh - 40px)">
+<div id="register" class="d-flex align-items-center" style="min-height: calc(100vh - 190px)">
   <div class="container">
     <div class=" row justify-content-center">
       <div class="col-lg-10 col-xl-9 mx-auto" style=" max-width:600px">
@@ -63,7 +63,7 @@
 
               <hr class="my-4" />
 
-              <a class="d-block text-center mt-2 small" href="#">Đã có tải khoản? Bấm vào đây để đăng nhập.</a>
+              <a class="d-block text-center mt-2 small" href="/login">Đã có tải khoản? Bấm vào đây để đăng nhập.</a>
             </form>
           </div>
         </div>
