--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,1 +1,39 @@
-<h1>Footer</h1>
+<footer class="text-center text-dark" style="background-color: #131313; margin-top:50px;">
+  <!-- Grid container -->
+  <div class="container pt-4">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a class="btn btn-link btn-floating btn-lg text-light m-1" href="#!" role="button"
+        data-mdb-ripple-color="light"><i class='bx bxl-facebook-circle'></i></a>
+
+      <!-- Twitter -->
+      <a class="btn btn-link btn-floating btn-lg text-light m-1" href="#!" role="button"
+        data-mdb-ripple-color="light"><i class='bx bxl-messenger'></i></a>
+
+      <!-- Google -->
+      <a class="btn btn-link btn-floating btn-lg text-light m-1" href="#!" role="button"
+        data-mdb-ripple-color="light"><i class='bx bxl-instagram'></i></a>
+
+      <!-- Instagram -->
+      <a class="btn btn-link btn-floating btn-lg text-light m-1" href="#!" role="button"
+        data-mdb-ripple-color="light"><i class='bx bxl-tiktok'></i></a>
+
+      <!-- Linkedin -->
+      <a class="btn btn-link btn-floating btn-lg text-light m-1" href="#!" role="button"
+        data-mdb-ripple-color="light"><i class='bx bxl-github'></i></a>
+      <!-- Github -->
+      <a class="btn btn-link btn-floating btn-lg text-light m-1" href="#!" role="button"
+        data-mdb-ripple-color="light"><i class='bx bxl-linkedin-square'></i></a>
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center text-light p-3" style="background-color: rgba(0, 0, 0);">
+    © 2021 Copyright:
+    <a class="text-light" href="">Kieu Minh Vu</a>
+  </div>
+  <!-- Copyright -->
+</footer>
