--- a/src/resources/views/user/pages/home.hbs
+++ b/src/resources/views/user/pages/home.hbs
@@ -1,1 +1,137 @@
-<h1>Home</h1>
+<div class="container mt-2">
+  <div id="carousel" class="d-none d-md-block">
+    <div class="row">
+      <div class="col-12 col-md-8">
+        <div id="carousel_1" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel_1" data-slide-to="0"></li>
+            <li data-target="#carousel_1" data-slide-to="1"></li>
+            <li data-target="#carousel_1" data-slide-to="2" class="active"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100"
+                src="https://images.fpt.shop/unsafe/filters:quality(90)/fptshop.com.vn/uploads/images/tin-tuc/132148/Originals/CES-2021-HyperX-products.jpg"
+                style="object-fit: cover;" height="475px" width="100%" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Phụ kiện chính hãng</h5>
+                <p>Chất lượng số 1 từ những thương hiệu nối tiếng.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="https://mega.com.vn/media/news/171_cpu_hub_1.jpg"
+                style="object-fit: cover;" height="475px" width="100%" alt="Second slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Linh kiện chất lượng cao</h5>
+                <p>Luôn cập nhật những linh kiện mới nhất.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100"
+                src="https://static.techspot.com/images2/news/bigimage/2021/09/2021-09-20-image-5.jpg"
+                style="object-fit: cover;" height="475px" width="100%" alt="Third slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Ngon, bổ, rẻ</h5>
+                <p>Cam kết vể giá thành và chế độ bảo hành tốt nhất .</p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carousel_1" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel_1" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="row">
+          <div class="col-6 col-md-12">
+            <div id="carousel_2" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel_2" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel_2" data-slide-to="1"></li>
+                <li data-target="#carousel_2" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="https://cdn.vietnammoi.vn/171464242508312576/2020/6/12/laptop-choi-game-1-159195353528213330545.jpg"
+                    width="100%" height="235px" style="object-fit: cover;" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://cdn.vox-cdn.com/thumbor/D0SWdPqagfh4d20yY78o0c0iInE=/0x0:2640x1749/1200x675/filters:focal(1257x1022:1679x1444)/cdn.vox-cdn.com/uploads/chorus_image/image/70223505/twarren_rtx3080.0.jpg"
+                    width="100%" height="235px" style="object-fit: cover;" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://images.fpt.shop/unsafe/filters:quality(90)/fptshop.com.vn/uploads/images/tin-tuc/120176/Originals/Headphone-la-gi-co-may-loai-thiet-ke-cua-headphone-4.jpg"
+                    width="100%" height="235px" style="object-fit: cover;" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="d-none d-md-block col-12 mt-1"></div>
+          <div class="col-6 col-md-12">
+            <div id="carousel_3" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel_3" data-slide-to="0"></li>
+                <li data-target="#carousel_3" data-slide-to="1" class="active"></li>
+                <li data-target="#carousel_3" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="https://cdn.tgdd.vn/Files/2020/10/08/1297117/combo-microphone-headphone-co-nghia-la-gi-.png"
+                    width="100%" height="235px" style="object-fit: cover;" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img src="https://cdn.tgdd.vn/Files/2021/09/26/1385684/keyboard-docking-la-gi-13.jpg" width="100%"
+                    height="235px" style="object-fit: cover;" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://cdn.tgdd.vn/hoi-dap/1359212/co-nen-mua-apple-magic-mouse-2-lieu-co-xung-dang-voi-so1.jpg"
+                    width="100%" height="235px" style="object-fit: cover;" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {{!--Laptop Last Update --}}
+  <div class="home_section">
+    <div class="ribbon">
+      <span class="content">Laptop mới cập nhật</span>
+    </div>
+    <div class="home_owl-1 owl-carousel owl-theme" id="owlcarousel1">
+    </div>
+  </div>
+  {{!--Accessories --}}
+  <div class="home_section">
+    <div class="ribbon">
+      <span class="content">Phụ kiện Logitech</span>
+    </div>
+    <div class="home_owl-2 owl-carousel owl-theme" id="owlcarousel2">
+    </div>
+    <div class="ribbon">
+      <span class="content">Linh kiện mới về</span>
+    </div>
+    <div class="home_owl-2 owl-carousel owl-theme" id="owlcarousel3">
+    </div>
+  </div>
+  {{!--Mobile Trending --}}
+  <div class="home_section">
+    <div class="ribbon">
+      <span class="content">Smartphong đang HOT</span>
+    </div>
+    <div class="home_owl-2 owl-carousel owl-theme" id="owlcarousel4">
+    </div>
+  </div>
+</div>
+
+<script src="/js/home.js"></script>
